--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
       <artifactId>commons-codec</artifactId>
       <version>1.15</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-dbcp2</artifactId>
+      <version>2.9.0</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>BookingSystem</finalName>
